tests/baselines/reference/parserErrorRecoveryIfStatement6.errors.txt
parserErrorRecoveryIfStatement6.ts(3,9): error TS2304: Cannot find name 'a'.
parserErrorRecoveryIfStatement6.ts(5,3): error TS1128: Declaration or statement expected.


==== parserErrorRecoveryIfStatement6.ts (2 errors) ====
    class Foo {
      f1() {
        if (a.b) {
            ~
!!! error TS2304: Cannot find name 'a'.
      }
      public f2() {
      ~~~~~~
!!! error TS1128: Declaration or statement expected.
      }
      f3() {
      }
    }
    